Switch from Unsplash URLs to local meal images - use generated wooden background images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
   </main>
   <footer>
-    <p>Accessible, mobile-first meal planner. Images: Unsplash/SVG mockups.</p>
+    <p>Accessible, mobile-first meal planner. Images: Local generated images.</p>
   </footer>
   <script src="app.js"></script>
 </body>
